# postgres

./: .abi-compliance-history  .buildconfig  .cirrus.star  .cirrus.tasks.yml  .cirrus.yml  .clang-format  .clang-tidy  .clangd  .clinerules  .dir-locals.el  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .mailmap  BENCHMARK_README.md  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT  Dockerfile  GNUmakefile.in  HISTORY  INSTALL  LICENSE  Makefile  Makefile.in  Makefile.tools  README  README-1ST  README-vi  README.CVS  README.git  README.md  README_TOAST_OPTIMIZATION.md  README_zenith.md  REOPEN.md  SETUP_GUIDE.md  TOAST_PERFORMANCE_TESTING_GUIDE.md  (+64 more)
contrib/: Contrib.index  Makefile  Makefile.global  README  contrib-global.mk  dist.mk  meson.build
contrib/adddepend/: README.adddepend  adddepend
contrib/adminpack/: .gitignore  Makefile  README.adminpack  adminpack--1.0--1.1.sql  adminpack--1.0.sql  adminpack--1.1--2.0.sql  adminpack--1.1.sql  adminpack--2.0--2.1.sql  adminpack--unpackaged--1.0.sql  adminpack.c  adminpack.control  adminpack.sql.in  meson.build  uninstall_adminpack.sql
contrib/amcheck/: Makefile  amcheck--1.0--1.1.sql  amcheck--1.0.sql  amcheck--1.1--1.2.sql  amcheck--1.2--1.3.sql  amcheck--1.3--1.4.sql  amcheck--1.4--1.5.sql  amcheck.control  meson.build  verify_common.c  verify_common.h  verify_gin.c  verify_heapam.c  verify_nbtree.c
contrib/apache_logging/: README  apachelog.sql  httpconf.txt
contrib/array/: Makefile  README.array_iterator  array_iterator.c  array_iterator.doc  array_iterator.h  array_iterator.sql  array_iterator.sql.in
contrib/auth_delay/: Makefile  auth_delay.c  meson.build
contrib/authn_id/: Makefile  authn_id--1.0.sql  authn_id.c  authn_id.control
contrib/auto_explain/: Makefile  auto_explain.c  meson.build
contrib/basebackup_to_shell/: Makefile  basebackup_to_shell.c  meson.build
contrib/basic_archive/: Makefile  basic_archive.c  basic_archive.conf  meson.build
contrib/basic_wal_module/: Makefile  basic_wal_module.c  basic_wal_module.conf  meson.build
contrib/bit/: Makefile  README  postgres.h  varbit.c  varbit.demo.sql  varbit.drop.sql  varbit.h  varbit.source  varbit_glue.c  vartest.c
contrib/bloom/: Makefile  blcost.c  blinsert.c  bloom--1.0.sql  bloom.control  bloom.h  blscan.c  blutils.c  blvacuum.c  blvalidate.c  meson.build
contrib/bool_plperl/: Makefile  bool_plperl--1.0.sql  bool_plperl.c  bool_plperl.control  bool_plperlu--1.0.sql  bool_plperlu.control  meson.build
contrib/btree_gin/: .gitignore  Makefile  btree_gin--1.0--1.1.sql  btree_gin--1.0.sql  btree_gin--1.1--1.2.sql  btree_gin--1.2--1.3.sql  btree_gin--1.3--1.4.sql  btree_gin--unpackaged--1.0.sql  btree_gin.c  btree_gin.control  btree_gin.sql.in  meson.build  uninstall_btree_gin.sql
contrib/btree_gist/: .gitignore  Makefile  README.btree_gist  btree_bit.c  btree_bool.c  btree_bytea.c  btree_cash.c  btree_common.c  btree_date.c  btree_enum.c  btree_float4.c  btree_float8.c  btree_gist--1.0--1.1.sql  btree_gist--1.0.sql  btree_gist--1.1--1.2.sql  btree_gist--1.1.sql  btree_gist--1.2--1.3.sql  btree_gist--1.2.sql  btree_gist--1.3--1.4.sql  btree_gist--1.4--1.5.sql  btree_gist--1.5--1.6.sql  btree_gist--1.6--1.7.sql  btree_gist--1.7--1.8.sql  btree_gist--1.8--1.9.sql  btree_gist--1.9.sql  btree_gist--unpackaged--1.0.sql  btree_gist.c  btree_gist.control  btree_gist.h  btree_gist.sql.in  btree_inet.c  btree_int2.c  btree_int4.c  btree_int8.c  btree_interval.c  btree_macaddr.c  btree_macaddr8.c  btree_num.c.in  btree_numeric.c  btree_oid.c  (+10 more)
contrib/chkpass/: .gitignore  Makefile  README.chkpass  chkpass--1.0.sql  chkpass--unpackaged--1.0.sql  chkpass.c  chkpass.control  chkpass.sql  chkpass.sql.in  uninstall_chkpass.sql
contrib/citext/: .gitignore  Makefile  citext--1.0.sql  citext--1.1--1.0.sql  citext--1.1--1.2.sql  citext--1.1.sql  citext--1.2--1.3.sql  citext--1.3.sql  citext--1.4--1.5.sql  citext--1.5--1.6.sql  citext--1.6--1.7.sql  citext--1.7--1.8.sql  citext--unpackaged--1.0.sql  citext.c  citext.control  citext.sql.in  meson.build  uninstall_citext.sql
contrib/cube/: .cvsignore  .gitignore  CHANGES  Makefile  README.cube  buffer.c  buffer.h  cube--1.0--1.1.sql  cube--1.0.sql  cube--1.1--1.2.sql  cube--1.1.sql  cube--1.2--1.3.sql  cube--1.2.sql  cube--1.3--1.4.sql  cube--1.4--1.5.sql  cube--unpackaged--1.0.sql  cube.c  cube.control  cube.sql.in  cubedata.h  cubeparse.y  cubescan.l  meson.build  uninstall_cube.sql
contrib/dateformat/: Makefile  to-from_char.c  to-from_char.doc  to-from_char.h  to-from_char.sql.in
contrib/datetime/: Makefile  datetime_functions.c  datetime_functions.doc  datetime_functions.h  datetime_functions.sql  datetime_functions.sql.in
contrib/dbase/: .gitignore  Makefile  README.dbf2pg  dbf.c  dbf.h  dbf2pg.1  dbf2pg.c  endian.c
contrib/dblink/: .gitignore  Makefile  README.dblink  dblink--1.0--1.1.sql  dblink--1.0.sql  dblink--1.1--1.2.sql  dblink--1.1.sql  dblink--1.2.sql  dblink--unpackaged--1.0.sql  dblink.c  dblink.control  dblink.h  dblink.sql.in  dblink.test.expected.out  dblink.test.sql  dblink_check.sh  meson.build  pg_service.conf  uninstall_dblink.sql
contrib/dbmirror/: AddTrigger.sql  DBMirror.pl  Makefile  MirrorSetup.sql  README.dbmirror  clean_pending.pl  pending.c  slaveDatabase.conf
contrib/dbsize/: .gitignore  Makefile  README.dbsize  dbsize.c  dbsize.sql.in
contrib/dict_int/: .gitignore  Makefile  README.dict_int  dict_int--1.0.sql  dict_int--unpackaged--1.0.sql  dict_int.c  dict_int.control  (+3 more)
sharding/: .gitignore  Cargo.toml  _build.rs  bindings.rs  build.rs  common_h_bindings.rs  libpq-int.rs  settings_h.rs  sharding_log
src/: .gitignore  BACKEND_DIRS  DEVELOPERS  DEV_TIPS  GNUmakefile  GNUmakefile.in  MAKE_CTAGS  MAKE_ETAGS  MAKE_ID  Makefile  Makefile.global  Makefile.global.in  Makefile.in  Makefile.shlib  PGINDENT  README.readline  bcc32.mak  build  config.guess  config.sub  configure  configure.in  customize  meson.build  nls-global.mk  pg_tde.c  pg_tde_defs.c  pg_tde_event_capture.c  update6_0-6_1.sh  update6_0-6_1.sql  win32.mak
(+12554 files in other folders)
